# robokit

./: README.md
robokit-monorepo/: .env.example  .gitignore  CLAUDE.md  E2E_REPO_DIAGRAM.md  README.md  SETUP_GUIDE.md  VALIDATION_COMMANDS.md  docker-compose.yml  e2e.txt  pyproject.toml
robokit-monorepo/.github/workflows/: tests.yml
robokit-monorepo/api/: .gitignore  README.md  app.py  main.py  pyproject.toml  pytest.ini
robokit-monorepo/api/api/v1/endpoints/: datasets.py
robokit-monorepo/api/core/: config.py  database.py  exceptions.py
robokit-monorepo/api/models/: dataset.py
robokit-monorepo/api/schemas/: dataset.py
robokit-monorepo/api/services/: attention_service.py  attention_wrapper.py  dataset_service.py  hf_utils.py  model_registry.py  rerun_service.py
robokit-monorepo/api/tests/: conftest.py  test_attention_analysis.py  test_config.py  test_endpoints.py  test_models.py  test_rerun_endpoints.py  test_rerun_service.py  test_schemas.py  test_services.py
robokit-monorepo/frontend/: .env.example  .gitignore  BACKEND_INTEGRATION.md  HUGGINGFACE_INTEGRATION.md  README.md  THEME_AUDIT.md  THEME_TEST_CHECKLIST.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
robokit-monorepo/frontend/app/: client-providers.tsx  globals.css  layout.tsx  page.tsx
robokit-monorepo/frontend/lib/: config.ts  query-client.ts  theme-provider.tsx
robokit-monorepo/frontend/tests/: authenticated-flows.spec.ts  dashboard.spec.ts  datasets-real.spec.ts  datasets.spec.ts  smoke.spec.ts  (+5 more)
robokit-monorepo/scripts/: __init__.py  dev.py
(+47 files in other folders)
