[project]
name = "robokit-api"
version = "0.0.1"
description = "Scientific computing API for RoboKit - dataset processing and analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "huggingface_hub>=0.21.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "alembic>=1.16.4",
    "httpx>=0.28.1",
    "typer>=0.16.0",
    "rerun-sdk==0.24.1",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "torch>=2.2.0",
    "safetensors>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "huggingface_hub>=0.21.2",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
test = "pytest:main"
